--- a/postman/schemas/hello.yaml
+++ b/postman/schemas/hello.yaml
@@ -1,7 +1,7 @@
 openapi: "3.0.0"
 info:
-  version: 1.1.2
-  title: Swagger Petstore
+  version: 1.2.3
+  title: Checking Account API Petstore
   license:
     name: MIT
 servers:
